task2/scripts/deployment-local.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: task-app
  template:
    metadata:
      labels:
        app: task-app
    spec:
      containers:
        - name: task
          image: task:v1
          ports:
            - name: web
              containerPort: 8000
