task2/scripts/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: task-app
  template:
    metadata:
      labels:
        app: task-app
    spec:
      containers:
        - name: task
          image: task:v1
          ports:
            - name: web
              containerPort: 8000
          livenessProbe:
            httpGet:
              port: 8000
              path: /version
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              port: 8000
              path: /health
            initialDelaySeconds: 10
            periodSeconds: 5
